--- a/config/lovelace/views/06-plants.yaml
+++ b/config/lovelace/views/06-plants.yaml
@@ -79,6 +79,44 @@
         #     card:
         #       - width: 5px
         #       - height: 10px
+        - type: horizontal-stack  # kentia
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              styles:
+                card:
+                  - width: 5px
+                  - height: 60px
+                  - box-shadow: '2px 2px rgba(0,0,0,0.0)'
+                  - --ha-card-background: 'rgba(11, 11, 11, 0.00)'
+            - type: plant-status
+              entity: plant.howea_forsteriana
+              card_mod:
+                style: |
+                  ha-card {
+                    background-color: var(--primary-background-color);
+                    border-radius: 15px;
+                    box-shadow: var(--softui-standard-boxshadow);
+                  }
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              styles:
+                card:
+                  - width: 5px
+                  - height: 60px
+                  - box-shadow: '2px 2px rgba(0,0,0,0.0)'
+                  - --ha-card-background: 'rgba(11, 11, 11, 0.00)'
+        - type: 'custom:button-card'
+          show_icon: false
+          show_name: false
+          styles:
+            card:
+              - width: 5px
+              - height: 10px
+              - box-shadow: '2px 2px rgba(0,0,0,0.0)'
+              - --ha-card-background: 'rgba(11, 11, 11, 0.00)'
         - type: horizontal-stack  # yucca
           cards:
             - type: 'custom:button-card'
