--- a/config/lovelace/views/08-vacuum.yaml
+++ b/config/lovelace/views/08-vacuum.yaml
@@ -163,16 +163,12 @@
             - type: 'custom:button-card'
               show_icon: false
               show_name: false
-              card_mod:
-                style: |
-                  ha-card {
-                    --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                    box-shadow: '2px 2px rgba(0,0,0,0.0)';
-                  }
               styles:
                 card:
                   - width: 5px
                   - height: 60px
+                  - box-shadow: '2px 2px rgba(0,0,0,0.0)'
+                  - --ha-card-background: 'rgba(11, 11, 11, 0.00)'
         - type: markdown
           content: |
             # Map
