--- a/config/integrations/recorder_include.yaml
+++ b/config/integrations/recorder_include.yaml
@@ -12,5 +12,6 @@ domains:
   - vacuum
   - cover
 entities:
+  - binary_sensor.bed_occupancy
   - binary_sensor.motion_sensor
   - binary_sensor.motion_sensor_2
