--- a/config/automation/vacuuum_automations.yaml
+++ b/config/automation/vacuuum_automations.yaml
@@ -133,12 +133,10 @@
     entity_id: !secret person_1
     state: 'home'
   action:
-    - service: vacuum.send_command
+    - service: mqtt.publish
       data:
-        entity_id: vacuum.roborock
-        command: 'go_to'
-        params:
-          'spot_id': '37b097a4-c502-47a9-b025-594255d4eb27'
+        topic: valetudo/roborock/GoToLocationCapability/go/set
+        payload: '["37b097a4-c502-47a9-b025-594255d4eb27"]'
     - wait_template: "{{ is_state('vacuum.roborock', 'returning') }}"
     - service: counter.reset
       data:
