--- a/config/integrations/sensor/template.yaml
+++ b/config/integrations/sensor/template.yaml
@@ -81,10 +81,10 @@
       value_template: "{{ ((states('sensor.roborock_main_filter') | float) / 60 ) | round(2) }}"
       unit_of_measurement: "h"
     roborock_right_side_brush_hours:
-      value_template: "{{ ((states('sensor.roborock_right_side_brush') | float) / 60 ) | round(2) }}"
+      value_template: "{{ ((states('sensor.roborock_right_brush') | float) / 60 ) | round(2) }}"
       unit_of_measurement: "h"
     roborock_sensor_hours:
-      value_template: "{{ ((states('sensor.roborock_sensor') | float) / 60 ) | round(2) }}"
+      value_template: "{{ ((states('sensor.roborock_sensor_cleaning') | float) / 60 ) | round(2) }}"
       unit_of_measurement: "h"
     sonoffs20_desk_uptime:
       value_template: "{{ ((states('sensor.sonoffs20_desk_uptime_raw') | float) / 60 / 60) | round(2) }}"
