add meteoalarm platform
* binary_sensor
* notification automation

--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -26,6 +26,8 @@ mail_acc_2_pw: password
 mail_acc_2_smtp: example.domain.com
 mail_acc_2_user: username
 mail_acc_3: mail@mail.com
+meteo_country: 'NL'
+meteo_province: 'Groningen'
 mqtt-int_port: 80
 mqtt_ip: 127.0.0.1
 mqtt_password: password
